compiler/testData/diagnostics/tests/inline/nonPublicMember/kt14887.fir.kt
inline fun foo() {
    <!UNRESOLVED_REFERENCE!>unresolved<!>().<!UNRESOLVED_REFERENCE!>another<!>
    <!UNRESOLVED_REFERENCE!>unresolved<!>().<!UNRESOLVED_REFERENCE!>another<!>()
}

fun main() {
    foo()
}
